@@ -10,6 +10,10 @@
     - The example for setting $VERSION from $Revision$ in SVN was
       incorrect. (Thanks to ROBERTMAY@cpan.org) [rt.cpan.org 26995]
 
+    Misc
+    - Provide information during the install about whether we're using the
+      installed or provided dependency (ie. ExtUtils::Command).
+
 6.32  Wed Feb 21 07:59:57 PST 2007
     New Features
     - WriteEmptyMakefile() is now exportable upon request.
